# space

./: chrome.sh  docs.md  exec.sh  init.sh  shell.sh
group/: chrome.sh  destroy.sh  exec.sh  init.sh  shell.sh
namespace/: destroy.sh  init.sh  shell.sh
space-cli/: .gitignore  README.md  pyproject.toml
space-cli/space/: cli.py  config.py  firewall.py  network.py
space2/: README.md  etc_network-policy.sh  etc_systemd_system_lan-only.service  usr_local_bin_online
