[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "space"
version = "0.1.0"
description = "Explicit internet access control for Linux"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
space = "space.cli:main"
